# cirq_sic

./: ChecksAndBalances.ipynb  MANIFEST.in  QuditArthursKelly.bib  QuditArthursKelly.ipynb  QuditArthursKelly.tex  QuditArthursKelly_Willow.ipynb  README.md  SIC_on_SIC.ipynb  SimplifiedWHPOVM_Willow.ipynb  d4Fiducial.nb  pyproject.toml  tests.py  utils.py
cirq_sic/: __init__.py  ansatz.py  circuits.py  designs.py  experiment.py  run_experiment.py  sic.py  sics.py  tests.py  utils.py  wh.py
cirq_sic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cirq_sic/data/: simple_povm_on_state_N20000.pkl  simple_povm_on_state_N5000.pkl  simple_sic_on_sic_N1000.pkl  simple_sic_on_sic_N5000.pkl
cirq_sic/experiments/: __init__.py  experiment_utils.py  parallel_runner.sh  random_states_run.py  run_simple_sky_ground.py  run_sky_ground.py  simple_sky_ground.py  sky_ground.py  sky_ground_args.py  sky_ground_args.txt  sky_ground_run.py  sky_ground_runner.sh
cirq_sic/notebooks/: AnsatzSICs.ipynb  ArbitraryDimensions.ipynb  ChecksAndBalances.ipynb  EmbeddedSIC.ipynb  EmbeddedSIC_Alternate.ipynb  Experiments.ipynb  Images.ipynb  Mod.ipynb  OptimizedSICs.ipynb  QuditArthursKelly.ipynb  QuditArthursKelly_Willow.ipynb  SIC_on_SIC.ipynb  SimpleQuditArthursKelly.ipynb  SimpleSkyGroundExperiment.ipynb  SimpleWHPOVM.ipynb  SkyGroundAnalysis.ipynb  TaskExample.ipynb  Test.ipynb  VolumeRatio.ipynb
data/: simple_povm_on_sic_N5000.pkl  simple_sic_on_sic_N10000.pkl  simple_sic_on_sic_N20000.pkl  simple_sic_on_state_N5000.pkl
text/: QuditArthursKellyPresentation.tex
(+198 files in other folders)
