[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cirq_sic"
version = "0.1.0"
dependencies = ["numpy", "scipy", "matplotlib", "cirq", "cirq-google", "qsimcirq", "recirq @ git+https://github.com/quantumlib/ReCirq", "ipykernel", "pytest", "jax", "bqskit", "qiskit", "ply"]

[pytest]
testpaths = "tests/"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]